[project]
name = "blog"
version = "0.1.0"
description = "mkdocs blog"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "csscompressor>=0.9.5",
    "libsass>=0.23.0",
    "mkdocs>=1.6.1",
    "mkdocs-simple-hooks>=0.1.5",
    "mkdocs-tale==0.1.6",
    "pymdown-extensions>=10.16",
]

